--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,12 @@
   </head>
 
   <body>
+    <div class="container">
+    <div class="navbar my-4">
+        <%= link_to "All restaurants", restaurants_path, class: "btn btn-primary" %>
+        <%= link_to "+ Add new restaurant", new_restaurant_path, class: "btn btn-primary" %>
+    </div>
     <%= yield %>
+    </div>
   </body>
 </html>
