--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,5 +1,1 @@
-<%= simple_form_for([@restaurant, @review]) do |f| %>
-  <%= f.input :rating, as: :select, collection: %w[0 1 2 3 4 5] %>
-  <%= f.input :content %>
-  <%= f.submit %>
-<% end %>
+<%= render 'form', restaurant: @restaurant, review: @review %>
